Libretro.NET.Generator/libretro.h


#define bool unsigned char
enum retro_hw_render_interface_type
{
	RETRO_HW_RENDER_INTERFACE_VULKAN = 0,
	RETRO_HW_RENDER_INTERFACE_D3D9   = 1,
	RETRO_HW_RENDER_INTERFACE_D3D10  = 2,
	RETRO_HW_RENDER_INTERFACE_D3D11  = 3,
	RETRO_HW_RENDER_INTERFACE_D3D12  = 4,
   RETRO_HW_RENDER_INTERFACE_GSKIT_PS2  = 5,
   RETRO_HW_RENDER_INTERFACE_DUMMY  = INT_MAX
};
struct retro_hw_render_interface
{
   enum retro_hw_render_interface_type interface_type;
   unsigned interface_version;
};
typedef void (RETRO_CALLCONV *retro_set_led_state_t)(int led, int state);
struct retro_led_interface
{
    retro_set_led_state_t set_led_state;
};
typedef bool (RETRO_CALLCONV *retro_midi_input_enabled_t)(void);
typedef bool (RETRO_CALLCONV *retro_midi_output_enabled_t)(void);
typedef bool (RETRO_CALLCONV *retro_midi_read_t)(uint8_t *byte);
typedef bool (RETRO_CALLCONV *retro_midi_write_t)(uint8_t byte, uint32_t delta_time);
typedef bool (RETRO_CALLCONV *retro_midi_flush_t)(void);
struct retro_midi_interface
{
   retro_midi_input_enabled_t input_enabled;
   retro_midi_output_enabled_t output_enabled;
   retro_midi_read_t read;
   retro_midi_write_t write;
   retro_midi_flush_t flush;
};
enum retro_hw_render_context_negotiation_interface_type
{
   RETRO_HW_RENDER_CONTEXT_NEGOTIATION_INTERFACE_VULKAN = 0,
   RETRO_HW_RENDER_CONTEXT_NEGOTIATION_INTERFACE_DUMMY = INT_MAX
};
struct retro_hw_render_context_negotiation_interface
{
   enum retro_hw_render_context_negotiation_interface_type interface_type;
   unsigned interface_version;
};
struct retro_memory_descriptor
{
   uint64_t flags;
   void *ptr;
   size_t offset;
   size_t start;
   size_t select;
   size_t disconnect;
   size_t len;
   const char *addrspace;
};
struct retro_memory_map
{
   const struct retro_memory_descriptor *descriptors;
   unsigned num_descriptors;
};
struct retro_controller_description
{
   const char *desc;
   unsigned id;
};
struct retro_controller_info
{
   const struct retro_controller_description *types;
   unsigned num_types;
};
struct retro_subsystem_memory_info
{
   const char *extension;
   unsigned type;
};
struct retro_subsystem_rom_info
{
   const char *desc;
   const char *valid_extensions;
   bool need_fullpath;
   bool block_extract;
   bool required;
   const struct retro_subsystem_memory_info *memory;
   unsigned num_memory;
};
struct retro_subsystem_info
{
   const char *desc;
   const char *ident;
   const struct retro_subsystem_rom_info *roms;
   unsigned num_roms;
   unsigned id;
};
typedef void (RETRO_CALLCONV *retro_proc_address_t)(void);
typedef retro_proc_address_t (RETRO_CALLCONV *retro_get_proc_address_t)(const char *sym);
struct retro_get_proc_address_interface
{
   retro_get_proc_address_t get_proc_address;
};
enum retro_log_level
{
   RETRO_LOG_DEBUG = 0,
   RETRO_LOG_INFO,
   RETRO_LOG_WARN,
   RETRO_LOG_ERROR,
   RETRO_LOG_DUMMY = INT_MAX
};
typedef void (RETRO_CALLCONV *retro_log_printf_t)(enum retro_log_level level,
      const char *fmt, ...);
struct retro_log_callback
{
   retro_log_printf_t log;
};
typedef uint64_t retro_perf_tick_t;
typedef int64_t retro_time_t;
struct retro_perf_counter
{
   const char *ident;
   retro_perf_tick_t start;
   retro_perf_tick_t total;
   retro_perf_tick_t call_cnt;
   bool registered;
};
typedef retro_time_t (RETRO_CALLCONV *retro_perf_get_time_usec_t)(void);
typedef retro_perf_tick_t (RETRO_CALLCONV *retro_perf_get_counter_t)(void);
typedef uint64_t (RETRO_CALLCONV *retro_get_cpu_features_t)(void);
typedef void (RETRO_CALLCONV *retro_perf_log_t)(void);
typedef void (RETRO_CALLCONV *retro_perf_register_t)(struct retro_perf_counter *counter);
typedef void (RETRO_CALLCONV *retro_perf_start_t)(struct retro_perf_counter *counter);
typedef void (RETRO_CALLCONV *retro_perf_stop_t)(struct retro_perf_counter *counter);
struct retro_perf_callback
{
   retro_perf_get_time_usec_t    get_time_usec;
   retro_get_cpu_features_t      get_cpu_features;
   retro_perf_get_counter_t      get_perf_counter;
   retro_perf_register_t         perf_register;
   retro_perf_start_t            perf_start;
   retro_perf_stop_t             perf_stop;
   retro_perf_log_t              perf_log;
};
enum retro_sensor_action
{
   RETRO_SENSOR_ACCELEROMETER_ENABLE = 0,
   RETRO_SENSOR_ACCELEROMETER_DISABLE,
   RETRO_SENSOR_GYROSCOPE_ENABLE,
   RETRO_SENSOR_GYROSCOPE_DISABLE,
   RETRO_SENSOR_ILLUMINANCE_ENABLE,
   RETRO_SENSOR_ILLUMINANCE_DISABLE,
   RETRO_SENSOR_DUMMY = INT_MAX
};
typedef bool (RETRO_CALLCONV *retro_set_sensor_state_t)(unsigned port,
      enum retro_sensor_action action, unsigned rate);
typedef float (RETRO_CALLCONV *retro_sensor_get_input_t)(unsigned port, unsigned id);
struct retro_sensor_interface
{
   retro_set_sensor_state_t set_sensor_state;
   retro_sensor_get_input_t get_sensor_input;
};
enum retro_camera_buffer
{
   RETRO_CAMERA_BUFFER_OPENGL_TEXTURE = 0,
   RETRO_CAMERA_BUFFER_RAW_FRAMEBUFFER,
   RETRO_CAMERA_BUFFER_DUMMY = INT_MAX
};
typedef bool (RETRO_CALLCONV *retro_camera_start_t)(void);
typedef void (RETRO_CALLCONV *retro_camera_stop_t)(void);
typedef void (RETRO_CALLCONV *retro_camera_lifetime_status_t)(void);
typedef void (RETRO_CALLCONV *retro_camera_frame_raw_framebuffer_t)(const uint32_t *buffer,
      unsigned width, unsigned height, size_t pitch);
typedef void (RETRO_CALLCONV *retro_camera_frame_opengl_texture_t)(unsigned texture_id,
      unsigned texture_target, const float *affine);
struct retro_camera_callback
{
   uint64_t caps;
   unsigned width;
   unsigned height;
   retro_camera_start_t start;
   retro_camera_stop_t stop;
   retro_camera_frame_raw_framebuffer_t frame_raw_framebuffer;
   retro_camera_frame_opengl_texture_t frame_opengl_texture;
   retro_camera_lifetime_status_t initialized;
   retro_camera_lifetime_status_t deinitialized;
};
typedef void (RETRO_CALLCONV *retro_location_set_interval_t)(unsigned interval_ms,
      unsigned interval_distance);
typedef bool (RETRO_CALLCONV *retro_location_start_t)(void);
typedef void (RETRO_CALLCONV *retro_location_stop_t)(void);