Libretro.NET/Bindings/RetroBindings.cs


    public enum retro_hw_render_interface_type
    {
        RETRO_HW_RENDER_INTERFACE_VULKAN = 0,
        RETRO_HW_RENDER_INTERFACE_D3D9 = 1,
        RETRO_HW_RENDER_INTERFACE_D3D10 = 2,
        RETRO_HW_RENDER_INTERFACE_D3D11 = 3,
        RETRO_HW_RENDER_INTERFACE_D3D12 = 4,
        RETRO_HW_RENDER_INTERFACE_GSKIT_PS2 = 5,
        RETRO_HW_RENDER_INTERFACE_DUMMY = 2147483647,
    }

    public partial struct retro_hw_render_interface
    {
        [NativeTypeName("enum retro_hw_render_interface_type")]
        public retro_hw_render_interface_type interface_type;

        [NativeTypeName("unsigned int")]
        public uint interface_version;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_set_led_state_t(int led, int state);

    public partial struct retro_led_interface
    {
        [NativeTypeName("retro_set_led_state_t")]
        public IntPtr set_led_state;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate bool retro_midi_input_enabled_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate bool retro_midi_output_enabled_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate bool retro_midi_read_t([NativeTypeName("uint8_t *")] byte* @byte);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate bool retro_midi_write_t([NativeTypeName("uint8_t")] byte @byte, [NativeTypeName("uint32_t")] uint delta_time);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate bool retro_midi_flush_t();

    public partial struct retro_midi_interface
    {
        [NativeTypeName("retro_midi_input_enabled_t")]
        public IntPtr input_enabled;

        [NativeTypeName("retro_midi_output_enabled_t")]
        public IntPtr output_enabled;

        [NativeTypeName("retro_midi_read_t")]
        public IntPtr read;

        [NativeTypeName("retro_midi_write_t")]
        public IntPtr write;

        [NativeTypeName("retro_midi_flush_t")]
        public IntPtr flush;
    }

    public enum retro_hw_render_context_negotiation_interface_type
    {
        RETRO_HW_RENDER_CONTEXT_NEGOTIATION_INTERFACE_VULKAN = 0,
        RETRO_HW_RENDER_CONTEXT_NEGOTIATION_INTERFACE_DUMMY = 2147483647,
    }

    public partial struct retro_hw_render_context_negotiation_interface
    {
        [NativeTypeName("enum retro_hw_render_context_negotiation_interface_type")]
        public retro_hw_render_context_negotiation_interface_type interface_type;

        [NativeTypeName("unsigned int")]
        public uint interface_version;
    }

    public unsafe partial struct retro_memory_descriptor
    {
        [NativeTypeName("uint64_t")]
        public ulong flags;

        [NativeTypeName("void *")]
        public void* ptr;

        [NativeTypeName("size_t")]
        public UIntPtr offset;

        [NativeTypeName("size_t")]
        public UIntPtr start;

        [NativeTypeName("size_t")]
        public UIntPtr select;

        [NativeTypeName("size_t")]
        public UIntPtr disconnect;

        [NativeTypeName("size_t")]
        public UIntPtr len;

        [NativeTypeName("const char *")]
        public sbyte* addrspace;
    }

    public unsafe partial struct retro_memory_map
    {
        [NativeTypeName("const struct retro_memory_descriptor *")]
        public retro_memory_descriptor* descriptors;

        [NativeTypeName("unsigned int")]
        public uint num_descriptors;
    }

    public unsafe partial struct retro_controller_description
    {
        [NativeTypeName("const char *")]
        public sbyte* desc;

        [NativeTypeName("unsigned int")]
        public uint id;
    }

    public unsafe partial struct retro_controller_info
    {
        [NativeTypeName("const struct retro_controller_description *")]
        public retro_controller_description* types;

        [NativeTypeName("unsigned int")]
        public uint num_types;
    }

    public unsafe partial struct retro_subsystem_memory_info
    {
        [NativeTypeName("const char *")]
        public sbyte* extension;

        [NativeTypeName("unsigned int")]
        public uint type;
    }

    public unsafe partial struct retro_subsystem_rom_info
    {
        [NativeTypeName("const char *")]
        public sbyte* desc;

        [NativeTypeName("const char *")]
        public sbyte* valid_extensions;

        public bool need_fullpath;

        public bool block_extract;

        public bool required;

        [NativeTypeName("const struct retro_subsystem_memory_info *")]
        public retro_subsystem_memory_info* memory;

        [NativeTypeName("unsigned int")]
        public uint num_memory;
    }

    public unsafe partial struct retro_subsystem_info
    {
        [NativeTypeName("const char *")]
        public sbyte* desc;

        [NativeTypeName("const char *")]
        public sbyte* ident;

        [NativeTypeName("const struct retro_subsystem_rom_info *")]
        public retro_subsystem_rom_info* roms;

        [NativeTypeName("unsigned int")]
        public uint num_roms;

        [NativeTypeName("unsigned int")]
        public uint id;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_proc_address_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    [return: NativeTypeName("retro_proc_address_t")]
    public unsafe delegate IntPtr retro_get_proc_address_t([NativeTypeName("const char *")] sbyte* sym);

    public partial struct retro_get_proc_address_interface
    {
        [NativeTypeName("retro_get_proc_address_t")]
        public IntPtr get_proc_address;
    }

    public enum retro_log_level
    {
        RETRO_LOG_DEBUG = 0,
        RETRO_LOG_INFO,
        RETRO_LOG_WARN,
        RETRO_LOG_ERROR,
        RETRO_LOG_DUMMY = 2147483647,
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate void retro_log_printf_t([NativeTypeName("enum retro_log_level")] retro_log_level level, [NativeTypeName("const char *")] sbyte* fmt);

    public partial struct retro_log_callback
    {
        [NativeTypeName("retro_log_printf_t")]
        public IntPtr log;
    }

    public unsafe partial struct retro_perf_counter
    {
        [NativeTypeName("const char *")]
        public sbyte* ident;

        [NativeTypeName("retro_perf_tick_t")]
        public ulong start;

        [NativeTypeName("retro_perf_tick_t")]
        public ulong total;

        [NativeTypeName("retro_perf_tick_t")]
        public ulong call_cnt;

        public bool registered;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    [return: NativeTypeName("retro_time_t")]
    public delegate long retro_perf_get_time_usec_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    [return: NativeTypeName("retro_perf_tick_t")]
    public delegate ulong retro_perf_get_counter_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    [return: NativeTypeName("uint64_t")]
    public delegate ulong retro_get_cpu_features_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_perf_log_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate void retro_perf_register_t([NativeTypeName("struct retro_perf_counter *")] retro_perf_counter* counter);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate void retro_perf_start_t([NativeTypeName("struct retro_perf_counter *")] retro_perf_counter* counter);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate void retro_perf_stop_t([NativeTypeName("struct retro_perf_counter *")] retro_perf_counter* counter);

    public partial struct retro_perf_callback
    {
        [NativeTypeName("retro_perf_get_time_usec_t")]
        public IntPtr get_time_usec;

        [NativeTypeName("retro_get_cpu_features_t")]
        public IntPtr get_cpu_features;

        [NativeTypeName("retro_perf_get_counter_t")]
        public IntPtr get_perf_counter;

        [NativeTypeName("retro_perf_register_t")]
        public IntPtr perf_register;

        [NativeTypeName("retro_perf_start_t")]
        public IntPtr perf_start;

        [NativeTypeName("retro_perf_stop_t")]
        public IntPtr perf_stop;

        [NativeTypeName("retro_perf_log_t")]
        public IntPtr perf_log;
    }

    public enum retro_sensor_action
    {
        RETRO_SENSOR_ACCELEROMETER_ENABLE = 0,
        RETRO_SENSOR_ACCELEROMETER_DISABLE,
        RETRO_SENSOR_GYROSCOPE_ENABLE,
        RETRO_SENSOR_GYROSCOPE_DISABLE,
        RETRO_SENSOR_ILLUMINANCE_ENABLE,
        RETRO_SENSOR_ILLUMINANCE_DISABLE,
        RETRO_SENSOR_DUMMY = 2147483647,
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate bool retro_set_sensor_state_t([NativeTypeName("unsigned int")] uint port, [NativeTypeName("enum retro_sensor_action")] retro_sensor_action action, [NativeTypeName("unsigned int")] uint rate);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate float retro_sensor_get_input_t([NativeTypeName("unsigned int")] uint port, [NativeTypeName("unsigned int")] uint id);

    public partial struct retro_sensor_interface
    {
        [NativeTypeName("retro_set_sensor_state_t")]
        public IntPtr set_sensor_state;

        [NativeTypeName("retro_sensor_get_input_t")]
        public IntPtr get_sensor_input;
    }

    public enum retro_camera_buffer
    {
        RETRO_CAMERA_BUFFER_OPENGL_TEXTURE = 0,
        RETRO_CAMERA_BUFFER_RAW_FRAMEBUFFER,
        RETRO_CAMERA_BUFFER_DUMMY = 2147483647,
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate bool retro_camera_start_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_camera_stop_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_camera_lifetime_status_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate void retro_camera_frame_raw_framebuffer_t([NativeTypeName("const uint32_t *")] uint* buffer, [NativeTypeName("unsigned int")] uint width, [NativeTypeName("unsigned int")] uint height, [NativeTypeName("size_t")] UIntPtr pitch);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate void retro_camera_frame_opengl_texture_t([NativeTypeName("unsigned int")] uint texture_id, [NativeTypeName("unsigned int")] uint texture_target, [NativeTypeName("const float *")] float* affine);

    public partial struct retro_camera_callback
    {
        [NativeTypeName("uint64_t")]
        public ulong caps;

        [NativeTypeName("unsigned int")]
        public uint width;

        [NativeTypeName("unsigned int")]
        public uint height;

        [NativeTypeName("retro_camera_start_t")]
        public IntPtr start;

        [NativeTypeName("retro_camera_stop_t")]
        public IntPtr stop;

        [NativeTypeName("retro_camera_frame_raw_framebuffer_t")]
        public IntPtr frame_raw_framebuffer;

        [NativeTypeName("retro_camera_frame_opengl_texture_t")]
        public IntPtr frame_opengl_texture;

        [NativeTypeName("retro_camera_lifetime_status_t")]
        public IntPtr initialized;

        [NativeTypeName("retro_camera_lifetime_status_t")]
        public IntPtr deinitialized;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_location_set_interval_t([NativeTypeName("unsigned int")] uint interval_ms, [NativeTypeName("unsigned int")] uint interval_distance);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate bool retro_location_start_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_location_stop_t();
